src/test/deca/context/invalid/oracle/condition_while_float.deca
{
    while(22.2f){
        print();
    }
}